# stm32_f0_snake

./: .gitignore  README.md  build-meson.sh  build.sh  meson.build
config/: cross_linux.txt
src/: STM32F070CBTX_FLASH.ld  meson.build
src/Drivers/: meson.build
src/Drivers/STM32F0xx_HAL_Driver/: meson.build
src/Inc/: constants.h  gpio.h  i2c.h  keyboard.h  main.h  prelude.h  psuedorandom.h  ringbuffer.h  screen.h  snake_state.h  util.h
src/Src/: constants.c  gpio.c  i2c.c  keyboard.c  main.c  meson.build  psuedorandom.c  screen.c  snake_state.c  stm32f0xx_it.c  util.c
