project_inc = [
  include_directories('Inc'),
  include_directories('Drivers/CMSIS/Include'),
  include_directories('Drivers/STM32F0xx_HAL_Driver/Inc'),
  include_directories('Drivers/STM32F0xx_HAL_Driver/Inc/Legacy'),
  include_directories('Drivers/CMSIS/Device/ST/STM32F0xx/Include/'),
  ]

subdir('Drivers') 
subdir('Src')
