project_src += [
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cortex.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dma.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_exti.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_gpio.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c_ex.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc.c',
	'src/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc_ex.c',
]
